# clicbot-unofficial-python

./: .gitignore  LICENSE.md  README.md  pyproject.toml
clicbot_unofficial/: __init__.py  _packet.py  _socket.py  _structure.py  clicbot.py  discovery.py  modules.py
examples/: 01_discovery.py  02_tree.py  03_servo.py  04_rotate.py  05_qrcode.py  06_mermaid.py
