[project]
name = "clicbot-unofficial"
version = "1.0.2"
description = "Unofficial Python library for controlling ClicBot modular robots over TCP/UDP"
readme = "README.md"
license = { file = "LICENSE.md" }
requires-python = ">=3.10"
dependencies = ["qrcode"]

[project.optional-dependencies]
png = ["qrcode[pil]"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.urls]
"Source" = "https://github.com/hrueger/unofficial-clicbot-sdk-python"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
